fixed layout responsivity on mobile - added menu on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,10 @@ body {
   height: auto;
 }
 
+.icons-menu{
+  display: none;
+}
+
 header {
   display: flex;
   height: 60px;
@@ -182,9 +186,15 @@ a {
   line-height: normal;
   padding-bottom: 60px;
   padding-left: 40px;
+  padding-top: 20px;
 }
 
 .container {
+  position: relative;
+  width: 50%;
+}
+
+.timeline .container {
   padding: 10px 50px;
   position: relative;
   width: 50%;
@@ -192,23 +202,23 @@ a {
   opacity: 0;
 }
 
-.container:nth-child(2) {
+.timeline .container:nth-child(2) {
   animation-delay: 1s;
 }
 
-.container:nth-child(3) {
+.timeline .container:nth-child(3) {
   animation-delay: 2s;
 }
 
-.container:nth-child(4) {
+.timeline .container:nth-child(4) {
   animation-delay: 3s;
 }
 
-.container:nth-child(5) {
+.timeline .container:nth-child(5) {
   animation-delay: 4s;
 }
 
-.container:nth-child(6) {
+.timeline .container:nth-child(6) {
   animation-delay: 5s;
 }
 
@@ -284,6 +294,7 @@ a {
 .contact {
   text-align: center;
 }
+
 .social-media {
   display: flex;
   justify-content: center;
@@ -323,10 +334,51 @@ footer {
   align-self: center;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 798px) {
   header {
     display: none;
+    height: 100%;
+    justify-content: start;
+    align-items: start;
+    padding: 32px;
+    opacity: 0.99;
+    bottom: 0;
   }
+
+  header nav a:first-of-type {
+    padding-top: 100px;
+  }
+
+  header nav a {
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    margin-bottom: 20px;
+    transition: visibility 1s, opacity 0.5s linear;
+  }
+
+  .icons-menu {
+    display: block;
+    width: 38px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+
+  .timeline .container {
+    width: 100%;
+  }
+
+  .show-menu{
+    position: fixed;
+    background: #10101a;
+    height: 60px;
+    width: 100%;
+    z-index: 20;
+  }
+
   .hero {
     height: auto;
     justify-content: space-around;
@@ -393,7 +445,7 @@ footer {
     margin: 50px auto;
   }
 
-  .timeline:after {
+  .timeline::after {
     left: 31px;
   }
 
@@ -425,5 +477,14 @@ footer {
     border-right: 15px solid #fff;
     border-left: 0;
     left: -15px;
+  }
+
+  .title-contact {
+    width: 100%;
+    text-align: center;
+  }
+
+  .title-contact span {
+    font-size: 24px;
   }
 }
